<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>roart</groupId>
  <!--artifactId>myweb</artifactId-->
  <artifactId>aether</artifactId>
  <!--artifactId>disksearchengine</artifactId-->
  <!--artifactId>akashic-disk-search-engine</artifactId-->
  <version>0.10-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Aether Disk Search Engine Parent</name>
  <!--name>Vaadin Web Application</name-->
  <modules>
    <module>shadow</module>
    <module>common</module>
    <module>convert</module>
    <module>core</module>
    <module>eureka</module>
    <module>database</module>
    <module>filesystem</module>
    <module>machinelearning</module>
    <module>searchengine</module>
    <!--module>web</module-->
    <module>webr</module>
    <module>servicemanager</module>
    <module>testdata</module>
    <module>distribution</module>
  </modules>
  <build>
    <pluginManagement>
      <plugins>
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
	  <version>${mavencompiler.version}</version>
          <configuration>
            <release>${jdk.version}</release>
	    <encoding>UTF-8</encoding>
	    <!-- for rest pathvariable -->
	    <parameters>true</parameters>
          </configuration>
	</plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
	<groupId>org.codehaus.mojo</groupId>
	<artifactId>tomcat-maven-plugin</artifactId>
	<version>1.2-SNAPSHOT</version>
	<configuration>
	  <!--url>http://192.168.1.7:8080/manager</url-->
	  <server>mytomcat</server>
	  <!--path>/mywebapp</path-->
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-war-plugin</artifactId>
	<version>2.2</version>
	<configuration>
	  <failOnMissingWebXml>false</failOnMissingWebXml>
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.eclipse.jetty</groupId>
	<artifactId>jetty-maven-plugin</artifactId>
	<version>${jetty.version}</version>
      </plugin>
      <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
		<configuration>
		  <argLine>
		    --add-opens java.base/java.lang=ALL-UNNAMED
		    --add-reads common.config=ALL-UNNAMED
		    --add-reads common.model=ALL-UNNAMED
		    --add-opens springdata/roart.database.spring=ALL-UNNAMED
		    --add-opens spark.ml/roart.classification.spark.ml=ALL-UNNAMED
		  </argLine>
		</configuration>
      </plugin>
      <plugin>
	<groupId>org.cyclonedx</groupId>
	<artifactId>cyclonedx-maven-plugin</artifactId>
	<version>${cyclonedx.version}</version>
	<executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>makeAggregateBom</goal>
            </goals>
          </execution>
	</executions>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.0.0-M5</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  </dependencies>
  <properties>
    <aether.version>0.10-SNAPSHOT</aether.version>
    <mavencompiler.version>3.14.1</mavencompiler.version>
    <mavenshade.version>3.6.0</mavenshade.version>
    <maveninstall.version>2.5.2</maveninstall.version>
    <!-- spark 4.0.1 -->
    <jetty.version>11.0.24</jetty.version>
    <!-- Upgrading to Spring Boot 4 GA -->
    <springboot.version>4.0.0</springboot.version>
    <!-- Align Spring Cloud with Boot 4; pick compatible release when available -->
    <springcloud.version>5.0.0</springcloud.version>
    <springcloudstarter.version>2025.1.0-RC1</springcloudstarter.version>
    <springcore.version>7.0.1</springcore.version>
    <eurekaclient.version>2.0.5</eurekaclient.version>
    <reactor.version>3.6.8</reactor.version>
    <jdk.version>21</jdk.version>
    <junit.version>5.10.2</junit.version>
    <mahout.lucene.version>8.9.0</mahout.lucene.version>
    <lucene.version>9.10.0</lucene.version>
    <solr.version>9.5.0</solr.version>
    <hbase.version>2.5.5</hbase.version>
    <cassandra.version>4.16.0</cassandra.version>
    <aws.version>1.12.114</aws.version>
    <awssdk.version>2.20.97</awssdk.version>
    <dynamodblocal.version>1.15.0</dynamodblocal.version>
    <tika.version>3.0.0</tika.version>
    <mahout.version>14.1</mahout.version>
    <!-- must keep at old version for some time -->
    <mahout.spark.version>2.4.0</mahout.spark.version>
    <spark.version>4.0.1</spark.version>
    <scala.version>2.13</scala.version>
    <spark.scala.version>2.13.16</spark.scala.version>
    <!-- must keep at old version for some time -->
    <kryo.version>2.21</kryo.version>
    <opennlp.version>2.2.0</opennlp.version>
    <hadoop.version>3.4.0</hadoop.version>
    <datanucleus.version>5.1.0-release</datanucleus.version>
    <jdo.version>3.0.1</jdo.version>
    <zookeeper.version>3.8.5</zookeeper.version>
    <!-- 5.9.0 did not work, got strange ClassNotFoundException -->
    <curator.version>5.8.0</curator.version>
    <hazelcast.version>5.3.1</hazelcast.version>
    <hazelcastclient.version>3.12.13</hazelcastclient.version>
    <snappyjava.version>1.0.4.1</snappyjava.version>
    <jackson.version>3.0.2</jackson.version>
    <jackson.annotations.version>2.20</jackson.annotations.version>
    <jackson.jsr.version>3.0.0-rc2</jackson.jsr.version>
    <httpclient.version>4.5.6</httpclient.version>
    <dbunit.dataTypeFactoryName>org.dbunit.ext.h2.H2DataTypeFactory</dbunit.dataTypeFactoryName>
    <hibernate.version>6.1.5.Final</hibernate.version>
    <hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
    <hibernate.hbm2ddl.auto>create</hibernate.hbm2ddl.auto>
    <h2.version>2.1.214</h2.version>
    <jdbc.groupId>com.h2database</jdbc.groupId>
    <jdbc.artifactId>h2</jdbc.artifactId>
    <jdbc.version>1.3.160</jdbc.version>
    <jdbc.driverClassName>org.h2.Driver</jdbc.driverClassName>
    <jdbc.url><![CDATA[jdbc:h2:${h2dir}]]>
    </jdbc.url>
    <postgresql.version>42.7.3</postgresql.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <h2dir>${project.build.directory}/h2</h2dir>
    <vaadin.version>7.6.0</vaadin.version>
    <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
    <gwt.version>2.3.0</gwt.version>
    <gwt.plugin.version>2.2.0</gwt.plugin.version>
    <slf4j.version>1.7.32</slf4j.version>
    <ehcache.version>5.6.14.Final</ehcache.version>
    <servlet.version>4.0.1</servlet.version>
    <javaxservlet.version>4.0.1</javaxservlet.version>
    <jakartaservlet.version>5.0.0</jakartaservlet.version>
    <!-- must keep at old version for some time -->
    <guava.version>33.4.0-jre</guava.version>
    <commons.version>2.1.1</commons.version>
    <fastutil.version>7.0.11</fastutil.version>
    <joss.version>0.9.14</joss.version>
    <elasticsearch.version>8.12.2</elasticsearch.version>
    <apachelog.version>2.7</apachelog.version>
    <netty.version>4.1.118.Final</netty.version>
    <jaxb.version>2.3.1</jaxb.version>
    <javaxinject.version>1</javaxinject.version>
    <kafka.version>3.5.0</kafka.version>
    <pulsar.version>3.0.0</pulsar.version>
    <commons.math3.version>3.6.1</commons.math3.version>
    <commons.lang3.version>3.8.1</commons.lang3.version>
    <commons.io.version>2.11.0</commons.io.version>
    <commons.beanutils.version>1.9.4</commons.beanutils.version>
    <log4j.version>1.2.17</log4j.version>
    <camel.version>4.0.0-RC1</camel.version>
    <camelactivemq.version>5.16.6</camelactivemq.version>
    <springintegration.version>6.1.0</springintegration.version>
    <springrabbit.version>3.0.4</springrabbit.version>
    <redisclient.version>4.4.3</redisclient.version>
    <redisson.version>3.27.1</redisson.version>
    <!-- spark 4.0.1 -->
    <chill.version>0.10.0</chill.version>
    <!-- spark 4.0.1 -->
    <jersey.version>3.0.16</jersey.version>
    <imageio.version>1.4.0</imageio.version>
    <cyclonedx.version>2.9.0</cyclonedx.version>
    <fabric8.version>7.0.1</fabric8.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <!-- Import Spring Boot dependency management so child modules inherit consistent versions -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${springboot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <!--repositories>
    <repository>
      <id>vaadin-addons</id>
      <url>https://maven.vaadin.com/vaadin-addons</url>
    </repository>
    <repository>
      <id>vaadin-snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
      <releases>
	<enabled>false</enabled>
      </releases>
      <snapshots>
	<enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories-->
  <repositories>
    <repository>
        <id>repository.spring.milestone</id>
        <name>Spring Milestone Repository</name>
        <url>https://repo.spring.io/milestone</url>
    </repository>
    <repository>
      <id>netflix-candidates</id>
      <name>Netflix Candidates</name>
      <url>https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates</url>
      <snapshots>
	<enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
        <id>repository.spring.milestone</id>
        <name>Spring Milestone Repository</name>
        <url>https://repo.spring.io/milestone</url>
    </pluginRepository>
  </pluginRepositories>
</project>
